# prepd

./: .gitignore  generate_questions.py  pyproject.toml  railway.toml  start.py
backend/: generate_questions.py  ingest_zvec.py  main.py
data/: questions.jsonl
prepdmob/: app.json  package-lock.json  package.json
